--- a/api_microservice/.env
+++ b/api_microservice/.env
@@ -1,3 +1,4 @@
 PORT=2003
+MONGO_URL="mongodb+srv://Rithick:Rithickg567@cluster0.9qa8x.mongodb.net/stripe_payment?retryWrites=true&w=majority"
 gmail='rithick2812@gmail.com'
 gmail_pass='jguzguxwlreceoin'
